--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,1 +1,90 @@
 @import '~bootstrap/scss/bootstrap';
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: box-sizing;
+}
+
+body {
+  background-image: linear-gradient(120deg, #f6d365, #d88771);
+  color: white;
+  font-family: "Poppins", sans-serif;
+  min-height: 100vh;
+}
+
+header {
+  font-size: 1.5rem;
+}
+
+form,
+header {
+  // min-height: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+form button,
+form input {
+  padding: 0.5rem;
+  font-size: 1rem;
+  border: none;
+  background: white;
+}
+
+form button {
+  color: #d88771;
+  background: white;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+form button:hover {
+  background: #d88771;
+  color: white;
+}
+
+.sub-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sub-list {
+  min-width: 30%;
+  list-style: none;
+}
+
+.sub {
+  margin: 0.5rem;
+  background: white;
+  color: black;
+  font-size: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.sub li {
+  flex: 1;
+}
+
+.complete-btn,
+.trash-btn {
+  background: #ff6f47;
+  color: white;
+  border: none;
+  padding: 0.5rem;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.complete-btn {
+  background: rgb(73,204,73);
+}
+
+.sub-item {
+  padding: 0 0.5rem;
+}
