--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,5 +1,5 @@
 @import '~bootstrap/scss/bootstrap';
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap'); // @import "scss/fontawesome.scss";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 * {
   margin: 0;
@@ -8,7 +8,7 @@
 }
 
 body {
-  background-image: linear-gradient(120deg, #f6d365, #d88771);
+  background-image: linear-gradient(120deg, #f6d365, #d95643);
   color: white;
   font-family: "Poppins", sans-serif;
   min-height: 100vh;
@@ -25,6 +25,7 @@ header {
 //   align-items: center;
 // }
 
+button,
 form button,
 form input {
   padding: 0.5rem;
@@ -39,15 +40,26 @@ form label {
   color: black;
 }
 
+button,
 form button {
-  color: #d88771;
+  color: #d95643;
   background: white;
   cursor: pointer;
   transition: all 0.3s ease;
 }
+// .change-pw {
+//   color: #d95643;
+//   background: white;
+// }
+//
+// .change-pw :hover{
+//   color: white;
+//   background: #d95643;
+// }
 
+button,
 form button:hover {
-  background: #d88771;
+  background: #d95643;
   color: white;
 }
 
