--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -18,12 +18,12 @@ header {
   font-size: 1.5rem;
 }
 // form,
-// header {
-//   // min-height: 20vh;
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-// }
+
+header {
+  min-height: 20vh; //   display: flex;
+  //   justify-content: center;
+  //   align-items: center;
+}
 
 button,
 form button,
@@ -40,22 +40,54 @@ form label {
   color: black;
 }
 
-button,
 form button {
   color: #d95643;
   background: white;
   cursor: pointer;
   transition: all 0.3s ease;
 }
-// .change-pw {
-//   color: #d95643;
-//   background: white;
-// }
-//
-// .change-pw :hover{
-//   color: white;
-//   background: #d95643;
-// }
+
+form button:hover {
+  color: white;
+  background: #d95643;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+#modal-changePw {
+  color: #d95643;
+  background: white;
+}
+
+#modal-changePw:hover {
+  color: white;
+  background: #d95643;
+}
+
+#sign-out:hover {
+  color: #d95643;
+  background: white;
+}
+
+#show-subs:hover {
+  color: #d95643;
+  background: white;
+}
+
+#modal-addNew:hover {
+  color: #d95643;
+  background: white;
+}
+
+#modal-editSub:hover {
+  color: #d95643;
+  background: white;
+}
+
+#modal-deleteSub:hover {
+  color: #d95643;
+  background: white;
+}
 
 button,
 form button:hover {
@@ -123,7 +155,7 @@ form button:hover {
   justify-content: center;
   align-items: center;
   align-content: center;
-  padding-top: 50px;
+  padding-top: 20px;
 }
 
 .flex-child {
@@ -140,16 +172,57 @@ form button:hover {
 
 .app-name {
   text-align: center;
-  padding-top: 20px;
+  padding-top: 40px;
+  color: black;
+  font-weight: 550;
+}
+
+#navBrand {
+  color: #d95643;
 }
 
 .authenticated {
   padding-top: 30px;
+  text-align: center;
 }
 
 #message {
   padding-top: 70px;
+  text-align: center;
+  font-size: 20px;
 }
+
+.demo {
+  margin: 10px auto;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
+  // text-align: center;
+  padding: 20px 10px 10px;
+  width: 50%;
+  border: 2px solid white;
+}
+
+#sub-display {
+  padding-top: 10px;
+  margin-top: 10px;
+}
+
+.img-head {
+  display: block;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+  opacity: 0.8;
+}
+// .introduction {
+//   margin: auto;
+//   border: 0 solid;
+//   widows: 30%;
+//   padding: 20px 10px 10px;
+//   text-align: center;
+// }
 /*CUSTOM SELECTOR */
 // select {
 //   -webkit-appearance: none;
