Finished styling in ui

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -177,6 +177,14 @@ form button:hover {
   font-weight: 550;
 }
 
+.user-name {
+  margin: auto;
+  color: green;
+  padding-right: 20px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
 #navBrand {
   color: #d95643;
 }
