--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -181,8 +181,13 @@ form button:hover {
   margin: auto;
   color: green;
   padding-right: 20px;
+  padding-left: 10px;
   font-weight: bold;
   cursor: pointer;
+}
+
+.signedIn{
+  color: green;
 }
 
 #navBrand {
